config/kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: find-unclaimed-court-money
spec:
  replicas: 1
  selector:
    matchLabels:
      app: find-unclaimed-court-money
  template:
    metadata:
      labels:
        app: find-unclaimed-court-money
    spec:
      containers:
        - name: webapp
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/central-digital-product-team/find-unclaimed-court-money-dev-ecr:latest
          ports:
            - containerPort: 3000
          command: ["./config/docker/entrypoint-webapp.sh"]
          readinessProbe:
            httpGet:
              path: /healthcheck/ready
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthcheck/live
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
